:bug: Fixed a bug where slide controls were partially hidden by sandbox controls.

--- a/sites/reactflow.dev/src/components/example-viewer/blog-flows/presentation/FocusOnClick/index.css
+++ b/sites/reactflow.dev/src/components/example-viewer/blog-flows/presentation/FocusOnClick/index.css
@@ -24,8 +24,8 @@ body,
 
 .slide__controls {
   position: absolute;
-  bottom: 2rem;
-  right: 2rem;
+  bottom: 4rem;
+  right: 4rem;
   display: flex;
   justify-content: end;
   gap: 4px;
